feat(cilium): run cilium in kube-proxy replacement mode

--- a/k8s/apps/kube-system/cilium/app/helm-values.yaml
+++ b/k8s/apps/kube-system/cilium/app/helm-values.yaml
@@ -54,3 +54,5 @@ securityContext:
       - NET_ADMIN
       - SYS_ADMIN
       - SYS_RESOURCE
+socketLB:
+  hostNamspaceOnly: true # Needed for tailscale
