--- a/k8s/apps/network/blocky/app/helmrelease.yaml
+++ b/k8s/apps/network/blocky/app/helmrelease.yaml
@@ -20,29 +20,27 @@ spec:
           app:
             image:
               repository: ghcr.io/0xerr0r/blocky
-              tag: v0.24
+              tag: v0.24@sha256:9a82e0235c52ef3048586f8006add06e52132adaae70d02f980569dae16421a2
+            env:
+              TZ: Australia/Sydney
             probes:
               liveness:
                 enabled: true
               readiness:
                 enabled: true
+            securityContext:
+              readOnlyRootFilesystem: true
+              allowPrivilegeEscalation: false
+              capabilities:
+                add: ["NET_BIND_SERVICE"]
+                drop: ["ALL"]
             resources:
               limits:
                 cpu: 1
                 memory: 256Mi
               requests:
                 cpu: 10m
-            securityContext:
-              allowPrivilegeEscalation: false
-              capabilities:
-                add:
-                  - NET_BIND_SERVICE
-                drop:
-                  - ALL
               readOnlyRootFilesystem: true
-        statefulset:
-          podManagementPolicy: Parallel
-        type: statefulset
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -50,6 +48,51 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         seccompProfile: {type: RuntimeDefault}
+    service:
+      blocky:
+        ports:
+          http:
+            port: 8080
+            protocol: HTTP
+            appProtocol: http
+      expose:
+        controller: blocky
+        type: LoadBalancer
+        annotations:
+          "io.cilium/lb-ipam-ips": "192.168.68.204"
+          tailscale.com/expose: true
+          tailscale.com/tags: "tag:dns"
+        ports:
+          dns:
+            port: 53
+            protocol: TCP
+            targetPort: 8053
+          dns-tcp:
+            port: 53
+            protocol: UDP
+            nodePort: 8053
+    ingress:
+      app:
+        annotations:
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
+        className: internal
+        hosts:
+          - host: "{{ .Release.Name }}.goyangi.cloud"
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: app
+                  port: http
+    serviceMonitor:
+      blocky:
+        serviceName: blocky
+        endpoints:
+          - port: metrics
+            scheme: http
+            path: /metrics
+            interval: 1m
+            scrapeTimeout: 30s
     persistence:
       config:
         globalMounts:
@@ -57,22 +100,3 @@ spec:
             subPath: config.yml
         name: config
         type: configMap
-    service:
-      app:
-        annotations:
-          coredns.io/hostname: blocky
-          metallb.universe.tf/allow-shared-ip: "blocky"
-        controller: blocky
-        ports:
-          dns-tcp:
-            port: 53
-            protocol: TCP
-            nodePort: 30055
-          dns-udp:
-            port: 53
-            protocol: UDP
-            nodePort: 30055
-          http:
-            port: 4000
-            primary: true
-        type: NodePort
