feat(blocky): deploy

--- a/k8s/apps/network/kustomization.yaml
+++ b/k8s/apps/network/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./cloudflared/ks.yaml
   - ./tailscale/ks.yaml
   - ./k8s-gateway/ks.yaml
+  - ./blocky/ks.yaml
   - ./external-dns/ks.yaml
   - ./nginx/ks.yaml
   - ./echo-server/ks.yaml
