feat(gatus): try add

--- a/k8s/apps/network/blocky/app/kustomization.yaml
+++ b/k8s/apps/network/blocky/app/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: blocky
 resources:
   - ./helmrelease.yaml
+  - ../../../../templates/gatus/guarded
 configMapGenerator:
   - name: config
     files:
