--- a/k8s/apps/network/blocky/app/helmrelease.yaml
+++ b/k8s/apps/network/blocky/app/helmrelease.yaml
@@ -60,9 +60,9 @@ spec:
         controller: blocky
         type: LoadBalancer
         annotations:
-          "io.cilium/lb-ipam-ips": "192.168.68.204"
           tailscale.com/expose: true
           tailscale.com/tags: "tag:dns"
+          tailscale.com/tailnet-ip: 100.100.100.101
         ports:
           dns:
             port: 53
