--- a/k8s/apps/network/blocky/app/helmrelease.yaml
+++ b/k8s/apps/network/blocky/app/helmrelease.yaml
@@ -16,6 +16,10 @@ spec:
   values:
     controllers:
       blocky:
+        replicas: 1
+        strategy: RollingUpdate
+        annotations:
+          reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
@@ -24,22 +28,28 @@ spec:
             env:
               TZ: Australia/Sydney
             probes:
-              liveness:
+              liveness: &probes
                 enabled: true
-              readiness:
-                enabled: true
+                custom: true
+                spec:
+                  tcpSocket:
+                    port: &port 53
+                  initialDelaySeconds: 15
+                  periodSeconds: 30
+                  failureThreshold: 3
+              readiness: *probes
+            resources:
+              requests:
+                cpu: 10m
+              limits:
+                cpu: 1
+                memory: 256Mi
             securityContext:
               readOnlyRootFilesystem: true
               allowPrivilegeEscalation: false
               capabilities:
                 add: ["NET_BIND_SERVICE"]
                 drop: ["ALL"]
-            resources:
-              limits:
-                cpu: 1
-                memory: 256Mi
-              requests:
-                cpu: 10m
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
@@ -55,7 +65,7 @@ spec:
             port: 8080
             protocol: HTTP
             appProtocol: http
-      expose:
+      dns:
         controller: blocky
         type: LoadBalancer
         annotations:
