fix(cilium): socketLB enabled

--- a/k8s/apps/kube-system/cilium/app/helm-values.yaml
+++ b/k8s/apps/kube-system/cilium/app/helm-values.yaml
@@ -55,4 +55,5 @@ securityContext:
       - SYS_ADMIN
       - SYS_RESOURCE
 socketLB:
+  enabled: true
   hostNamspaceOnly: true # Needed for tailscale
