feat(cilium): add blocky IP

--- a/k8s/apps/network/blocky/app/helmrelease.yaml
+++ b/k8s/apps/network/blocky/app/helmrelease.yaml
@@ -69,9 +69,10 @@ spec:
         controller: blocky
         type: LoadBalancer
         annotations:
+          lbipam.cilium.io/ips: "192.168.68.101"
           tailscale.com/expose: "true"
           tailscale.com/tags: "tag:dns"
-          tailscale.com/tailnet-ip: 100.100.100.101
+          tailscale.com/tailnet-ip: "100.100.100.101"
         ports:
           dns:
             port: 53
