--- a/k8s/apps/network/external-dns/ks.yaml
+++ b/k8s/apps/network/external-dns/ks.yaml
@@ -18,3 +18,24 @@ spec:
   wait: true
   interval: 30m
   timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app external-dns-pihole
+  namespace: flux-system
+spec:
+  targetNamespace: network
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  dependsOn:
+    - name: external-secrets-stores
+  path: ./k8s/apps/network/external-dns/pihole
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: homelab
+  wait: true
+  interval: 30m
+  timeout: 5m
