--- a/k8s/apps/network/kustomization.yaml
+++ b/k8s/apps/network/kustomization.yaml
@@ -4,6 +4,8 @@ resources:
   - ./namespace.yaml
   - ./cloudflared/ks.yaml
   - ./tailscale/ks.yaml
+  - ./k8s-gateway/ks.yaml
+  - ./blocky/ks.yaml
   - ./external-dns/ks.yaml
   - ./nginx/ks.yaml
   - ./echo-server/ks.yaml
