--- a/k8s/apps/kube-system/coredns/app/helm-values.yaml
+++ b/k8s/apps/kube-system/coredns/app/helm-values.yaml
@@ -22,6 +22,11 @@ servers:
           class error
       - name: prometheus
         parameters: 0.0.0.0:9153
+      - name: hosts
+        configBlock: |-
+          192.168.68.24 pi.internal
+          192.168.68.10 nas.internal
+          fallthrough
       - name: kubernetes
         parameters: cluster.local in-addr.arpa ip6.arpa
         configBlock: |-
@@ -29,23 +34,11 @@ servers:
           fallthrough in-addr.arpa ip6.arpa
       - name: forward
         parameters: . /etc/resolv.conf
-      - name: file
-        parameters: /etc/coredns/internal.db goyangi.cloud
       - name: cache
         parameters: 30
       - name: loop
       - name: reload
       - name: loadbalance
-zoneFiles:
-  - filename: internal.db
-    domain: goyangi.cloud
-    contents: |
-      internal.    IN SOA ns.dns.goyangi.cloud. hostmaster.goyangi.cloud. 2015082541 7200 3600 1209600 3600
-      internal.    IN NS  ns.dns.goyangi.cloud.
-      nas.internal IN A 100.109.54.32
-      nas.internal IN A 192.168.68.10
-      pi.internal  IN A 100.91.196.13
-      pi.internal  IN A 192.168.68.24
 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
