--- a/k8s/apps/network/k8s-gateway/app/helmrelease.yaml
+++ b/k8s/apps/network/k8s-gateway/app/helmrelease.yaml
@@ -34,10 +34,13 @@ spec:
       - name: ready
       - name: prometheus
         parameters: 0.0.0.0:9153
+      - name: hosts
+        configBlock: |-
+          192.168.68.24 pi.internal
+          192.168.68.10 nas.internal
+          fallthrough
       - name: forward
         parameters: . /etc/resolv.conf
-      - name: file
-        parameters: /etc/coredns/internal.db goyangi.cloud
       - name: loop
       - name: reload
       - name: loadbalance
@@ -49,16 +52,5 @@ spec:
         tailscale.com/expose: "true"
         tailscale.com/hostname: "k8s-gateway"
         tailscale.com/tags: "tag:k8s-gateway"
-        tailscale.com/tailnet-ip: "100.100.100.202"
       externalTrafficPolicy: Cluster
     watchedResources: ["Ingress", "Service"]
-    zoneFiles:
-      - filename: internal.db
-        domain: goyangi.cloud
-        contents: |
-          internal.    IN SOA ns.dns.goyangi.cloud. hostmaster.goyangi.cloud. 2015082541 7200 3600 1209600 3600
-          internal.    IN NS  ns.dns.goyangi.cloud.
-          nas.internal IN A 100.109.54.32
-          nas.internal IN A 192.168.68.10
-          pi.internal IN A 100.91.196.13
-          pi.internal IN A 192.168.68.24
