feat(internal): add to network ns

--- a/k8s/apps/network/kustomization.yaml
+++ b/k8s/apps/network/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./cloudflared/ks.yaml
+  - ./internal/ks.yaml
   - ./tailscale/ks.yaml
   - ./k8s-gateway/ks.yaml
   - ./blocky/ks.yaml
