--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -29,7 +29,9 @@ spec:
       calibre:
         initContainers:
           init:
-            image: ghcr.io/curl/curl-container/curl
+            image:
+              repository: ghcr.io/curl/curl-container/curl
+              tag: latest
           args: ["-Lo", "/media/calibre/metadata.db", "--silent", "--no-clobber", "https://github.com/kovidgoyal/calibre/raw/refs/heads/master/src/calibre/db/tests/metadata.db"]
         containers:
           app:
