feat: deploy pocket-id

--- a/k8s/apps/default/kustomization.yaml
+++ b/k8s/apps/default/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
   - ./audiobookshelf/ks.yaml
   - ./stash/ks.yaml
   - ./plex/ks.yaml
+  - ./pocket-id/ks.yaml
   - ./tautulli/ks.yaml
   - ./jellyseerr/ks.yaml
   - ./wizarr/ks.yaml
