feat: reduce resources

--- a/k8s/apps/default/bazarr/app/helmrelease.yaml
+++ b/k8s/apps/default/bazarr/app/helmrelease.yaml
@@ -72,6 +72,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 10Mi
               limits:
                 memory: 128Mi
             securityContext: *securityContext
