--- a/k8s/apps/default/cross-seed/app/helmrelease.yaml
+++ b/k8s/apps/default/cross-seed/app/helmrelease.yaml
@@ -49,6 +49,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 10Mi
               limits:
                 memory: 512Mi
     defaultPodOptions:
