--- a/k8s/apps/default/filebrowser/app/helmrelease.yaml
+++ b/k8s/apps/default/filebrowser/app/helmrelease.yaml
@@ -55,6 +55,9 @@ spec:
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
             resources:
+              requests:
+                cpu: 10m
+                memory: 10Mi
               limits:
                 memory: 2Gi
     defaultPodOptions:
