--- a/k8s/apps/default/autobrr/app/helmrelease.yaml
+++ b/k8s/apps/default/autobrr/app/helmrelease.yaml
@@ -66,6 +66,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 10Mi
               limits:
                 memory: 256Mi
     defaultPodOptions:
