--- a/k8s/apps/default/calibre/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre/app/helmrelease.yaml
@@ -61,6 +61,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 10Mi
               limits:
                 memory: 1Gi
     defaultPodOptions:
