fix(minio): make zfs dataset for ml-platform

--- a/k8s/apps/ml-platform/minio/app/helmrelease.yaml
+++ b/k8s/apps/ml-platform/minio/app/helmrelease.yaml
@@ -121,6 +121,6 @@ spec:
       ml:
         type: nfs
         server: nas.internal
-        path: /mnt/world/ml
+        path: /mnt/world/ml-platform
         globalMounts:
           - path: /ml
