--- a/k8s/apps/default/readarr-ab/app/helmrelease.yaml
+++ b/k8s/apps/default/readarr-ab/app/helmrelease.yaml
@@ -34,7 +34,9 @@ spec:
             image:
               repository: alpine
               tag: 3.21.0@sha256:21dc6063fd678b478f57c0e13f47560d0ea4eeba26dfc947b2a4f81f686b9f45
-            command: ["sh", "-c", "cp /secret/config.xml /config/config.xml && chown $PUID:$PGID /config/config.xml"]
+            command: ["sh", "-c"]
+            args: >-
+              cp /secret/config.xml /config/config.xml; chown $PUID:$PGID /config/config.xml;
             env:
               PUID: 1000
               PGID: 1000
