--- a/k8s/apps/observability/kustomization.yaml
+++ b/k8s/apps/observability/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - ./blackbox-exporter/ks.yaml
   - ./smartctl-exporter/ks.yaml
   - ./speedtest-exporter/ks.yaml
+  - ./headlamp/ks.yaml
