--- a/k8s/flux/repos/helm/kustomization.yaml
+++ b/k8s/flux/repos/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./coredns.yaml
   - ./descheduler.yaml
   - ./emqx.yaml
+  - ./headlamp.yaml
   - ./jetstack.yaml
   - ./metrics-server.yaml
   - ./openebs.yaml
