--- a/k8s/apps/default/pgadmin/app/externalsecret.yaml
+++ b/k8s/apps/default/pgadmin/app/externalsecret.yaml
@@ -6,9 +6,14 @@ metadata:
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
-    name: onepassword
+    name: onepassword-connect
   target:
     name: pgadmin-secret
-  data:
-    PGADMIN_DEFAULT_EMAIL: "{{ .PGADMIN_DEFAULT_EMAIL }}"
-    PGADMIN_DEFAULT_PASSWORD: "{{ .PGADMIN_DEFAULT_PASSWORD }}"
+    template:
+      engineVersion: v2
+      data:
+        PGADMIN_DEFAULT_EMAIL: "{{ .PGADMIN_DEFAULT_EMAIL }}"
+        PGADMIN_DEFAULT_PASSWORD: "{{ .PGADMIN_DEFAULT_PASSWORD }}"
+  dataFrom:
+    - extract:
+        key: pgadmin
