--- a/k8s/apps/default/pocket-id/app/helmrelease.yaml
+++ b/k8s/apps/default/pocket-id/app/helmrelease.yaml
@@ -74,6 +74,9 @@ spec:
     service:
       pocket-id:
         controller: *app
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: 192.168.68.130
         ports:
           http:
             port: *port
