--- a/k8s/apps/kube-system/coredns/app/helm-values.yaml
+++ b/k8s/apps/kube-system/coredns/app/helm-values.yaml
@@ -22,6 +22,9 @@ servers:
           class error
       - name: prometheus
         parameters: 0.0.0.0:9153
+      - name: hosts
+        configBlock: |-
+          192.168.68.130 pid.goyangi.cloud
       - name: kubernetes
         parameters: cluster.local in-addr.arpa ip6.arpa
         configBlock: |-
