fix: add fallthrough

--- a/k8s/apps/kube-system/coredns/app/helm-values.yaml
+++ b/k8s/apps/kube-system/coredns/app/helm-values.yaml
@@ -25,6 +25,7 @@ servers:
       - name: hosts
         configBlock: |-
           192.168.68.130 pid.goyangi.cloud
+          fallthrough
       - name: kubernetes
         parameters: cluster.local in-addr.arpa ip6.arpa
         configBlock: |-
