--- a/k8s/apps/default/pgadmin/app/helmrelease.yaml
+++ b/k8s/apps/default/pgadmin/app/helmrelease.yaml
@@ -61,9 +61,10 @@ spec:
       pgadmin:
         className: internal
         annotations:
-          nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.goyangi.cloud/oauth2/auth
-          nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.goyangi.cloud/oauth2/start?rd=$scheme://$best_http_host$request_uri
-          nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-email"
+          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
+          # nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.goyangi.cloud/oauth2/auth
+          # nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.goyangi.cloud/oauth2/start?rd=$scheme://$best_http_host$request_uri
+          # nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-email"
         hosts:
           - host: "pgadmin.goyangi.cloud"
             paths:
