--- a/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/k8s/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -38,8 +38,8 @@ spec:
         enabled: true
         annotations:
           external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
-          nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.goyangi.cloud/oauth2/auth
-          nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.goyangi.cloud/oauth2/start?rd=$scheme://$best_http_host$request_uri
+          # nginx.ingress.kubernetes.io/auth-url: https://oauth2-proxy.goyangi.cloud/oauth2/auth
+          # nginx.ingress.kubernetes.io/auth-signin: https://oauth2-proxy.goyangi.cloud/oauth2/start?rd=$scheme://$best_http_host$request_uri
         ingressClassName: internal
         hosts: ["alertmanager.goyangi.cloud"]
         pathType: Prefix
