feat(komga): calibre read access

--- a/k8s/apps/default/komga/app/helmrelease.yaml
+++ b/k8s/apps/default/komga/app/helmrelease.yaml
@@ -81,3 +81,6 @@ spec:
           - path: /media/books
             subPath: books
             readOnly: true
+          - path: /media/calibre
+            subPath: calibre
+            readOnly: true
