--- a/k8s/apps/default/kopia/app/helmrelease.yaml
+++ b/k8s/apps/default/kopia/app/helmrelease.yaml
@@ -71,7 +71,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
-                memorY: 10Mi
+                memory: 10Mi
               limits:
                 memory: 1Gi
     defaultPodOptions:
