--- a/k8s/apps/default/qbittorrent/tools/resources/config.yaml
+++ b/k8s/apps/default/qbittorrent/tools/resources/config.yaml
@@ -37,7 +37,7 @@ trackers:
     required_seed_days: 0
   - name: digitalcore.club
     urls: ["digitalcore.club"]
-    required_seed_ratio: 0
+    required_seed_ratio: 1
     required_seed_days: 5
   - name: torrentleech.org
     urls: ["torrentleech.org", "tleechreload.org"]
@@ -59,3 +59,7 @@ trackers:
     urls: ["oldtoons.world"]
     required_seed_ratio: 1
     required_seed_days: 2
+  - name: happyfappy
+    urls: ["happyfappy.org"]
+    required_seed_ratio: 1
+    required_seed_days: 7
