feat(qbtools): update config

--- a/k8s/apps/default/qbittorrent/tools/resources/config.yaml
+++ b/k8s/apps/default/qbittorrent/tools/resources/config.yaml
@@ -63,3 +63,7 @@ trackers:
     urls: ["happyfappy.org"]
     required_seed_ratio: 1
     required_seed_days: 7
+  - name: ianon
+    urls: ["ianon.app"]
+    required_seed_ratio: 1
+    required_seed_days: 30
