feat(cross-seed): add prowlarr torznab indexers

--- a/k8s/apps/default/cross-seed/app/externalsecret.yaml
+++ b/k8s/apps/default/cross-seed/app/externalsecret.yaml
@@ -50,6 +50,8 @@ spec:
               20, // SportsCult
               21, // LST
               22, // Oldtoons
+              23, // CinemaZ
+              24, // iAnon
             ].map(i => `http://prowlarr.default.svc.cluster.local/$${i}/api?apikey={{ .PROWLARR_API_KEY }}`),
           };
   dataFrom:
