--- a/k8s/apps/default/seasonpackarr/app/externalsecret.yaml
+++ b/k8s/apps/default/seasonpackarr/app/externalsecret.yaml
@@ -12,11 +12,11 @@ spec:
     template:
       engineVersion: v2
       data:
-        SEASONPACKARR__SMART_MODE: true
-        SEASONPACKARR__SMART_MODE_THRESHOLD: 0.75
-        SEASONPACKARR__PARSE_TORRENT_FILE: true
-        SEASONPACKARR__SKIP_REPACK_COMPARE: true
-        SEASONPACKARR__SIMPLIFY_HDR_COMPARE: false
+        SEASONPACKARR__SMART_MODE: "true"
+        SEASONPACKARR__SMART_MODE_THRESHOLD: "0.75"
+        SEASONPACKARR__PARSE_TORRENT_FILE: "true"
+        SEASONPACKARR__SKIP_REPACK_COMPARE: "true"
+        SEASONPACKARR__SIMPLIFY_HDR_COMPARE: "false"
         SEASONPACKARR__API_TOKEN: "{{ .SEASONPACKARR_API_TOKEN }}"
   dataFrom:
     - extract:
