chore(seasonpackarr): move env from externalsecret to helmrelease

--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -35,6 +35,11 @@ spec:
               SEASONPACKARR__HOST: 0.0.0.0
               SEASONPACKARR__PORT: &port 80
               SEASONPACKARR__LOG_LEVEL: INFO
+              SEASONPACKARR__SMART_MODE: true
+              SEASONPACKARR__SMART_MODE_THRESHOLD: 0.75
+              SEASONPACKARR__PARSE_TORRENT_FILE: true
+              SEASONPACKARR__SKIP_REPACK_COMPARE: true
+              SEASONPACKARR__SIMPLIFY_HDR_COMPARE: false
             args: ["--config", "/config"]
             envFrom: &envFrom
               - secretRef:
