--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -23,7 +23,7 @@ spec:
       retries: 3
   values:
     controllers:
-      autobrr:
+      seasonpackarr:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
