fix(seasonpackarr): create empty config

--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -26,6 +26,12 @@ spec:
       seasonpackarr:
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          touch:
+            image:
+              repository: docker.io/library/busybox
+              tag: latest
+            command: ["sh", "-c", "touch /config/config.yaml"]
         containers:
           app:
             image:
