--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -26,12 +26,6 @@ spec:
       seasonpackarr:
         annotations:
           reloader.stakater.com/auto: "true"
-        initContainers:
-          touch:
-            image:
-              repository: docker.io/library/busybox
-              tag: latest
-            command: ["sh", "-c", "touch /config/config.yaml"]
         containers:
           app:
             image:
@@ -99,6 +93,8 @@ spec:
                   identifier: app
                   port: http
     persistence:
+      config:
+        existingClaim: seasonpackarr
       tmp:
         type: emptyDir
         sizeLimit: 1Gi
