--- a/k8s/apps/default/seasonpackarr/app/kustomization.yaml
+++ b/k8s/apps/default/seasonpackarr/app/kustomization.yaml
@@ -6,3 +6,11 @@ resources:
   - ./helmrelease.yaml
   - ../../../../templates/volsync
   - ../../../../templates/gatus/guarded/
+configMapGenerator:
+  - name: seasonpackarr-config
+    files:
+      - config.yaml=./resources/config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
