--- a/k8s/apps/default/seasonpackarr/app/resources/config.yaml
+++ b/k8s/apps/default/seasonpackarr/app/resources/config.yaml
@@ -5,7 +5,7 @@ clients:
   default:
     host: "http://qbittorrent.default.svc.cluster.local"
     port: 8080
-    username: "admin"
+    username: "andrew"
     password: "1234"
     preImportPath: "/media/downloads/complete/sonarr"
 logLevel: "INFO"
