--- a/k8s/apps/default/calibre-web/app/helmrelease.yaml
+++ b/k8s/apps/default/calibre-web/app/helmrelease.yaml
@@ -52,8 +52,8 @@ spec:
                   periodSeconds: 5
             securityContext:
               allowPrivilegeEscalation: false
-              # readOnlyRootFilesystem: true
-              capabilities: {drop: ["ALL"]}
+              readOnlyRootFilesystem: true
+              capabilities: {drop: ["ALL"], add: ["NET_BIND_SERVICE"]}
             resources:
               requests:
                 cpu: 10m
