fix: see what config it generates

--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -83,14 +83,14 @@ spec:
     persistence:
       config:
         existingClaim: seasonpackarr
-      secret-file:
-        type: configMap
-        name: seasonpackarr-config
-        defaultMode: 0775
-        globalMounts:
-          - path: /config/config.yaml
-            subPath: config.yaml
-            readOnly: true
+      # secret-file:
+      #   type: configMap
+      #   name: seasonpackarr-config
+      #   defaultMode: 0775
+      #   globalMounts:
+      #     - path: /config/config.yaml
+      #       subPath: config.yaml
+      #       readOnly: true
       tmp:
         type: emptyDir
         sizeLimit: 1Gi
