fix: don't need pvc, try config

--- a/k8s/apps/default/seasonpackarr/app/kustomization.yaml
+++ b/k8s/apps/default/seasonpackarr/app/kustomization.yaml
@@ -4,13 +4,12 @@ kind: Kustomization
 resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ../../../../templates/volsync
   - ../../../../templates/gatus/guarded/
-# configMapGenerator:
-#   - name: seasonpackarr-config
-#     files:
-#       - config.yaml=./resources/config.yaml
-# generatorOptions:
-#   disableNameSuffixHash: true
-#   annotations:
-#     kustomize.toolkit.fluxcd.io/substitute: disabled
+configMapGenerator:
+  - name: seasonpackarr-config
+    files:
+      - config.yaml=./resources/config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
