--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -43,8 +43,7 @@ spec:
             envFrom:
               - secretRef:
                   name: seasonpackarr-secret
-            # args: ["--config", "/config"]
-            command: ["sh", "-c", "sleep infinity"]
+            args: ["--config", "/config"]
             probes:
               liveness: &probes
                 enabled: true
@@ -58,23 +57,23 @@ spec:
                   timeoutSeconds: 1
                   failureThreshold: 3
               readiness: *probes
-            # securityContext:
-            #   allowPrivilegeEscalation: false
-            #   readOnlyRootFilesystem: true
-            #   capabilities: {drop: ["ALL"]}
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: {drop: ["ALL"]}
             resources:
               requests:
                 cpu: 10m
                 memory: 10Mi
               limits:
                 memory: 256Mi
-    # defaultPodOptions:
-    #   securityContext:
-    #     runAsNonRoot: true
-    #     runAsUser: 1000
-    #     runAsGroup: 1000
-    #     fsGroup: 1000
-    #     seccompProfile: {type: RuntimeDefault}
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        seccompProfile: {type: RuntimeDefault}
     service:
       app:
         controller: seasonpackarr
@@ -84,14 +83,14 @@ spec:
     persistence:
       config:
         existingClaim: seasonpackarr
-      # secret-file:
-      #   type: configMap
-      #   name: seasonpackarr-config
-      #   defaultMode: 0775
-      #   globalMounts:
-      #     - path: /config/config.yaml
-      #       subPath: config.yaml
-      #       readOnly: true
+      secret-file:
+        type: configMap
+        name: seasonpackarr-config
+        defaultMode: 0775
+        globalMounts:
+          - path: /config/config.yaml
+            subPath: config.yaml
+            readOnly: true
       tmp:
         type: emptyDir
         sizeLimit: 1Gi
