--- a/k8s/apps/default/seasonpackarr/app/externalsecret.yaml
+++ b/k8s/apps/default/seasonpackarr/app/externalsecret.yaml
@@ -13,6 +13,16 @@ spec:
       engineVersion: v2
       data:
         SEASONPACKARR__API_TOKEN: "{{ .SEASONPACKARR_API_TOKEN }}"
+        config.yaml: |
+          clients:
+            default:
+              host: "http://qbittorrent.default.svc.cluster.local"
+              port: 8080
+              username: "{{ .QBITTORRENT_USER }}"
+              password: "{{ .QBITTORRENT_PASSWORD }}"
+              preImportPath: "/media/downloads/torrents/complete/sonarr"
   dataFrom:
     - extract:
         key: seasonpackarr
+    - extract:
+        key: qbittorrent
