--- a/k8s/apps/default/qbittorrent/tools/kustomization.yaml
+++ b/k8s/apps/default/qbittorrent/tools/kustomization.yaml
@@ -2,12 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./qbtools-config.sops.yaml
   - ./helmrelease.yaml
-configMapGenerator:
-  - name: qbtools-config
-    files:
-      - config.yaml=./resources/config.yaml
-generatorOptions:
-  disableNameSuffixHash: true
-  annotations:
-    kustomize.toolkit.fluxcd.io/substitute: disabled
