fix: try add volsync pvc back

--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -81,6 +81,8 @@ spec:
           http:
             port: *port
     persistence:
+      config:
+        existingClaim: seasonpackarr
       secret-file:
         type: secret
         name: seasonpackarr-secret
