fix: try different liveness route

--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -50,7 +50,7 @@ spec:
                 custom: true
                 spec:
                   httpGet:
-                    path: /api/healthz
+                    path: /healthz
                     port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
