jank: copy secret to writable

--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -26,6 +26,17 @@ spec:
       seasonpackarr:
         annotations:
           reloader.stakater.com/auto: "true"
+        initContainers:
+          copy-secret:
+            image:
+              repository: alpine
+              tag: 3.21.1@sha256:b97e2a89d0b9e4011bb88c02ddf01c544b8c781acf1f4d559e7c8f12f1047ac3
+            command: ["sh", "-c"]
+            args: >-
+              cp /secret/config.yaml/ config/config.yaml; chown $PUID:$PGID /config/config.yaml;
+            env:
+              PGID: 1000
+              PUID: 1000
         containers:
           app:
             image:
@@ -86,7 +97,7 @@ spec:
         name: seasonpackarr-secret
         defaultMode: 0775
         globalMounts:
-          - path: /config/config.yaml
+          - path: /secret/config.yaml
             subPath: config.yaml
       tmp:
         type: emptyDir
