--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -61,7 +61,8 @@ spec:
                 custom: true
                 spec:
                   httpGet:
-                    path: /api/healthz/liveness
+                    # path: /api/healthz/liveness
+                    path: /
                     port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
