fix: nvm i need pvc

--- a/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
+++ b/k8s/apps/default/seasonpackarr/app/helmrelease.yaml
@@ -93,6 +93,8 @@ spec:
           http:
             port: *port
     persistence:
+      config:
+        existingClaim: seasonpackarr
       secret-file:
         type: secret
         name: seasonpackarr-secret
