--- a/k8s/apps/kube-system/metrics-server/app/helmrelease.yaml
+++ b/k8s/apps/kube-system/metrics-server/app/helmrelease.yaml
@@ -20,13 +20,15 @@ spec:
     remediation:
       retries: 3
   values:
+    args:
+      - --kubelet-insecure-tls
+      - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
+      - --kubelet-use-node-status-port
+      - --metric-resolution=10s
+      - --kubelet-request-timeout=2s
     resources:
       requests:
         cpu: 10m
-    args:
-      - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
-      - --kubelet-use-node-status-port
-      - --metric-resolution=15s
     metrics:
       enabled: true
     serviceMonitor:
