feat: unifi gang

--- a/k8s/apps/observability/unpoller/app/externalsecret.yaml
+++ b/k8s/apps/observability/unpoller/app/externalsecret.yaml
@@ -2,18 +2,18 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: external-dns-pihole
+  name: unpoller
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: external-dns-pihole-secret
+    name: unpoller-secret
     template:
       engineVersion: v2
       data:
-        EXTERNAL_DNS_PIHOLE_SERVER: "{{ .EXTERNAL_DNS_PIHOLE_SERVER }}"
-        EXTERNAL_DNS_PIHOLE_PASSWORD: "{{ .EXTERNAL_DNS_PIHOLE_PASSWORD }}"
+        UP_UNIFI_DEFAULT_USER: "{{ .UP_UNIFI_DEFAULT_USER }}"
+        UP_UNIFI_DEFAULT_PASS: "{{ .UP_UNIFI_DEFAULT_PASS }}"
   dataFrom:
     - extract:
-        key: external-dns-pihole
+        key: unpoller
