--- a/k8s/apps/network/external-dns/ks.yaml
+++ b/k8s/apps/network/external-dns/ks.yaml
@@ -22,7 +22,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app external-dns-pihole
+  name: &app external-dns-unifi
   namespace: flux-system
 spec:
   targetNamespace: network
@@ -31,7 +31,7 @@ spec:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: external-secrets-stores
-  path: ./k8s/apps/network/external-dns/pihole
+  path: ./k8s/apps/network/external-dns/unifi
   prune: true
   sourceRef:
     kind: GitRepository
