--- a/k8s/bootstrap/apps/helmfile.yaml
+++ b/k8s/bootstrap/apps/helmfile.yaml
@@ -13,48 +13,40 @@ repositories:
   - name: coredns
     url: https://coredns.github.io/helm
 releases:
-  # - name: kube-prometheus-stack-crds
-  #   namespace: observability
-  #   chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
-  #   version: 17.0.2
-  #
-  # - name: cilium
-  #   namespace: kube-system
-  #   chart: cilium/cilium
-  #   version: 1.16.5
-  #   values:
-  #     - ../../apps/kube-system/cilium/app/helm-values.yaml
-  #     - commonLabels:
-  #         helm.toolkit.fluxcd.io/name: cilium
-  #         helm.toolkit.fluxcd.io/namespace: kube-system
-  #   needs:
-  #     - observability/kube-prometheus-stack-crds
-  #
-  # - name: coredns
-  #   namespace: kube-system
-  #   chart: coredns/coredns
-  #   version: 1.37.0
-  #   values:
-  #     - ../../apps/kube-system/coredns/app/helm-values.yaml
-  #     - customLabels:
-  #         helm.toolkit.fluxcd.io/name: coredns
-  #         helm.toolkit.fluxcd.io/namespace: kube-system
-  #   needs:
-  #     - kube-system/cilium
-  #
-  # - name: spegel
-  #   namespace: kube-system
-  #   chart: oci://ghcr.io/spegel-org/helm-charts/spegel
-  #   version: v0.0.28
-  #   values:
-  #     - ../../apps/kube-system/spegel/app/helm-values.yaml
-  #     # TODO: https://github.com/spegel-org/spegel/pull/678
-  #     # - commonLabels:
-  #     #     helm.toolkit.fluxcd.io/name: spegel
-  #     #     helm.toolkit.fluxcd.io/namespace: kube-system
-  #   needs:
-  #     - kube-system/cilium
-  #
+  - name: kube-prometheus-stack-crds
+    namespace: observability
+    chart: oci://ghcr.io/prometheus-community/charts/prometheus-operator-crds
+    version: 17.0.2
+  - name: cilium
+    namespace: kube-system
+    chart: cilium/cilium
+    version: 1.16.5
+    values:
+      - ../../apps/kube-system/cilium/app/helm-values.yaml
+      - commonLabels:
+          helm.toolkit.fluxcd.io/name: cilium
+          helm.toolkit.fluxcd.io/namespace: kube-system
+    needs:
+      - observability/kube-prometheus-stack-crds
+  - name: coredns
+    namespace: kube-system
+    chart: coredns/coredns
+    version: 1.37.0
+    values:
+      - ../../apps/kube-system/coredns/app/helm-values.yaml
+      - customLabels:
+          helm.toolkit.fluxcd.io/name: coredns
+          helm.toolkit.fluxcd.io/namespace: kube-system
+    needs:
+      - kube-system/cilium
+  - name: spegel
+    namespace: kube-system
+    chart: oci://ghcr.io/spegel-org/helm-charts/spegel
+    version: v0.0.28
+    values:
+      - ../../apps/kube-system/spegel/app/helm-values.yaml
+    needs:
+      - kube-system/cilium
   - name: flux
     namespace: flux-system
     chart: oci://ghcr.io/fluxcd-community/charts/flux2
@@ -77,6 +69,6 @@ releases:
           labels:
             helm.toolkit.fluxcd.io/name: flux
             helm.toolkit.fluxcd.io/namespace: flux-system
-    # needs:
-    #   - kube-system/coredns
-    #   - kube-system/spegel
+    needs:
+      - kube-system/coredns
+      - kube-system/spegel
